gcc/testsuite/rust/rustc/ui/parser/doc-before-eof.rs
fn main() {}

/// hi // { dg-error "" "" { target *-*-* } }

